# minesweeper

./: CMakeLists.txt  dump.h  extra_glut.h  field.h  main.cpp  std.h
tests/: main_test.cpp  std_test.cpp
